--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
+@font-face {
+  font-family: Cyclone;
+  src: url("./fonts/Cyclone Background.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Futura Bold";
+  src: url("./fonts/Bitstream - FuturaBT Bold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Futura Medium";
+  src: url("./fonts/Bitstream - FuturaBT Medium.otf") format("opentype");
+}
+
+body {
+  height: 100vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+h1 {
+  font-family: "Futura Bold";
+  font-size: 3rem;
+  margin: 0px 0px 40px 0px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+p {
+  font-family: "Futura Medium";
+  font-size: 1.5rem;
+  margin: 0px 0px 25px 0px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+button {
+  font-family: "Futura Medium";
+  font-size: 1.5rem;
+  margin: 0 auto 25px auto;
+  width: 75vw;
+  display: block;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .App {
+  position: fixed;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Quote {
+  border-radius: 5px;
+  background-color: green;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: 0 auto 25px auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 75vw;
 }
 
-.App-link {
-  color: #61dafb;
+#title {
+  font-size: 3.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 411px) {
+  h1 {
+    font-size: 2.0rem;
   }
-  to {
-    transform: rotate(360deg);
+  p {
+    font-size: 1rem;
+  }
+  button {
+    font-size: 1rem;
+  }
+  #title {
+    font-size: 2.5rem;
   }
 }
+/*# sourceMappingURL=App.css.map */
